ipq9574: update kernel/drivers to ath12.3-cs
Signed-off-by: John Crispin <john@phrozen.org>

--- a/feeds/ipq95xx/ipq95xx/config-5.4
+++ b/feeds/ipq95xx/ipq95xx/config-5.4
@@ -1274,3 +1274,4 @@ CONFIG_INIT_STACK_NONE=y
 # CONFIG_SECCRYPT is not set
 CONFIG_HWMON=y
 # CONFIG_CORESIGHT_STREAM is not set
+# CONFIG_QTI_HW_KEY is not set
