--- a/feeds/ipq95xx/ipq53xx/config-5.4
+++ b/feeds/ipq95xx/ipq53xx/config-5.4
@@ -456,6 +456,8 @@ CONFIG_GPIO_DEVRES=y
 # CONFIG_GPIO_GW_PLD is not set
 # CONFIG_GPIO_LATCH is not set
 # CONFIG_GPIO_NXP_74HC153 is not set
+CONFIG_GPIO_PCA953X=y
+# CONFIG_GPIO_PCA953X_IRQ is not set
 # CONFIG_GPIO_SAMA5D2_PIOBU is not set
 CONFIG_GPIO_SYSFS=y
 # CONFIG_GPIO_USB_DETECT is not set
