--- a/feeds/ipq807x/ipq807x/config-4.4
+++ b/feeds/ipq807x/ipq807x/config-4.4
@@ -830,3 +830,4 @@ CONFIG_DIAG_CHAR=y
 # CONFIG_NF_CONNTRACK_RTCACHE is not set
 # CONFIG_NF_LOG_IPV6 is not set
 CONFIG_LEDS_TRIGGER_HEARTBEAT=y
+# CONFIG_BRIDGE_NETFILTER is not set
